some code changes

--- a/hw/main/templates/main/checkout.html
+++ b/hw/main/templates/main/checkout.html
@@ -187,7 +187,7 @@
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
-                                <button type="submit" class="site-btn">PLACE </button>
+                                <a href="#" type="submit" class="site-btn">PLACE </a>
                             </div>
                         </div>
                     </div>
