--- a/hw/main/templates/main/shopping-cart.html
+++ b/hw/main/templates/main/shopping-cart.html
@@ -101,7 +101,7 @@
                                             
                                         </div>
                                     </td>
-                                    <td class="cart__price">$ {{get_product_total}}</td>
+                                    <td class="cart__price">$ {{product.get_total_price}}</td>
                                     <td data-index="{{product.id}}" type="button" class="cart__close delete-product"><i class="fa fa-close"></i></td>
                     
                                 {% endif %}
@@ -115,7 +115,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="continue__btn">
-                                <a href="#">Продолжить Шоппинг</a>
+                                <a href="{% url 'shop' %}">Продолжить Шоппинг</a>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -223,7 +223,7 @@
                 }
             })
         })
-    
+        
     </script>
 </body>
 
